<resources>
    <string name="app_name">International Studies</string>
    <string name="mainTitle">Center for International Studies and Programs Mobile App</string>
    <string name="mainAdviseTitle">Academic Advising</string>
    <string name="action_settings">Settings</string>
    <string name="mainAdmissionsTitle">Admissions Information</string>
    <string name="mainExchangeTitle">Exchange Program</string>
    <string name="mainServicesTitle">Student and Faculty services</string>
    <string name="mainOtherTitle">Other Resources</string>
    <string name="mainStudyTitle">Study Abroad</string>
    <string name="mainAboutCispTitle">About Us</string>
    <string name="title_activity_second_advise">Academic Advising</string>
    <string name="headerAdvise">International Advising</string>
    <string name="adviseParagraph">The primary purpose of the academic
        advising program at California State University San Bernardino
        is to assist students in the development and implementation of
        meaningful educational plans that are compatible with their life
        goals. The program provides opportunities for students to assess
        their interests and academic abilities, encouraging their fullest
        intellectual development. Students at CSUSB will receive
        ongoing support empowering them to accomplish their personal,
        educational, and professional goals.</string>
    <string name="cispButtonTitle">About CISP and Staff</string>
    <string name="informationItemButtonTitle">Informational Items</string>
    <string name="testOrientationButtonTitle">Orientation and Testing</string>
    <string name="secondAdviseHeader">Academic Advising</string>
    <string name="academicAdvisingImage">Academic Advising</string>
    <string name="studyAbroad_title">Welcome to Study Abroad</string>
    <string name="studyAbroad_programsButton">Browse Programs</string>
    <string name="studyAbroad_applicationButton">Horizon Application</string>
    <string name="studyAbroad_scholarshipButton">Gilman Scholarship</string>
    <string name="studyAbroad_body">        CSUSB students can experience the opportunity to study abroad.
        The focus of this page is to provide students with the necessary
        information to advise them in selecting the best study abroad program
        which will complement their educational and career goals.</string>
    <string name="studyAbroad_gilmanScholarship_body">The Gilman Scholarship
        for Study Abroad. For PELL Grant recipients in an accepted study abroad program.
        Recipients can receive up to either $3000 for summer programs or $5000 for semester
        or year programs.\n\n

        The Gilman Program offers scholarship for students with financial need who have been
        under-represented in education abroad. Award amounts will vary depending on the length
        of study. The average award is $4000. Undergraduate students who are receiving federal
        Pell Grant funding at 2-year or 4-year colleges or universities are eligible to apply.
        Study Abroad students are eligible to receive an additional $3,000 for studying for the
        Critical Need Languages(Arabic, Chinese, Turkic, Persian, Indic, Korean, and Russian).</string>
    <string name="apply">Apply</string>
    <string name="title_activity_about_cisp">About CISP</string>
    <string name="aboutCispHeader">About Us</string>
    <string name="otherResourcesHeader">Other Resources</string>
    <string name="healthInsuranceButtonTitle">Health Insurance</string>
    <string name="campusMapButtonTitle">Campus Map</string>
    <string name="housingButtonTitle">Housing</string>
    <string name="housingHeader">Housing</string>
    <string name="onCampusHousingHeader"><b><u>On Campus Housing</u></b></string>
    <string name="onCampusDescrip">        There is also housing available on campus for exchange visitors but availability is very
        limited. You can e-mail conference@csusb.edu. Please refer your e-mail to Ruth Landeros
        and she will be able to assist you in finding housing on campus, if it is available. DO
        NOT try to get on campus housing through the link directly below because that
        is only for students and they require a Coyote One ID#.!!</string>
    <string name="onCampusForStudentsButtonTitle">On Campus Housing for Students</string>
    <string name="offCampusHeader"><b><u>Off Campus Housing</u></b></string>
    <string name="offCampusDescrip">WHAT YOU NEED TO KNOW BEFORE RENTING AN APARTMENT\n\n

        It is very difficult to find short-term, furnished housing options in the US. Therefore,
        you are advised to live in university residence halls when possible. Living in a residence
        hall provides the convenience of a furnished room and a meal plan. In addition, you are
        close to university classrooms, libraries and college life. However it is very difficult
        to get a room on campus because the dorms do fill up quickly. Below are some options of
        Apartments around CSU, San Bernardino.\n\n</string>
    <string name="mountainVillageHousing"><u>Mountainside Village</u>\n
        Office: (909) 886-2100\n
        Office Fax: (909) 886-2103\n
        Email: office@msidevillage.com\n
        Website: www.msidevillage.com\n
        Address: 1660 Kendall Drive San Bernardino, CA 92407\n</string>
    <string name="acaciaParkHousing"><u>Acacia Park Apartments</u>\n
        Contact Person: Leilani Collier\n
        Telephone: (909) 880-2068\n
        Fax: (909) 880-1449\n
        Website: www.acaciaparkapts.com\n
        Address: 5280 N. Little Mountain Dr., San Bernardino, CA 92407  \n</string>
    <string name="athenaGardenHousing"><u>Athena Garden</u>\n
        Contact Person: Timothy\n
        Office: (909) 880-8563\n
        Address: 2294 Kendall Drive, San Bernardino, CA 92407  \n</string>
    <string name="broadstoneHousing"><u>Broadstone Serrano</u>\n
        Contact Person: Melinda Gater / Melinda Rios\n
        Telephone: (909) 880-1884\n
        Fax: (909) 880-3225\n
        Email: broadstoneserrano@allresco.com\n
        Website: www.broadstoneserrano-apts.com\n
        Address: 1930 W. College Ave., San Bernardino, CA 92407  \n</string>
    <string name="castleParkHousing"><u>Castle Park Resort Apartments</u>\n
        Office: (909) 880-1828\n
        Office Fax: (909) 887-8849\n
        Email: castlepark@legacypartners.com\n
        Website: www.castleparkresort.com\n
        Address: 2065 W. College Avenue San Bernardino, CA 92407  \n</string>
    <string name="havenApartment"><u>Crest Haven Apartment Homes</u>\n
        Office: (909) 887-1430\n
        Office Fax: (909) 887-8375\n
        Website: www.cresthavenapartments.net\n
        Address: 6155 Palm Avenue San Bernardino, CA 92407  \n</string>
    <string name="lidoHousing"><u>Lido Communities</u>\n
        Contact Person: Deanna Zaragoza, Community Manager\n
        Office: (909) 886-2100\n
        Office Fax: (909) 886-2103\n
        Email: lidoatshandinhills@hotmail.com\n
        Website: www.LidoShandinHills.com\n
        Address: 1265 Kendall Drive, San Bernardino, CA 92407  \n</string>
    <string name="sunriseHousing"><u>Sunrise Apartments</u>\n
        Contact Person: Loretta Chavez\n
        Telephone: (909) 887-8171\n
        Fax: (909) 887-4248\n
        Email: sunrise@rpmcompany.net\n
        Address: 1505 Northpark Boulevard, San Bernardino, CA 92407  \n</string>
    <string name="ExchangePrograms">Exchange Programs</string>
    <string name="NationalStudentExchangeProgram">National Student Exchange Program</string>
    <string name="ExchangeprogramContent">CSUSB is a member of this cooperative program that allows selected
        students to spend up to one year at one of 168 U.S. colleges. These campuses are located in 48 states,
        District of Columbia, Puerto Rico, Guam, Virgin Islands and Canada. The exchange student pays either normal Cal State
        San Bernardino fees or in state tuition at the host institution. For more information on participating
        institutions and how you can take advantage of this opportunity visit, click on the options below:</string>
    <string name="exchangeFinancialAid">Exchange Program Financial Aid</string>
    <string name="courseListings">Course Listings</string>
    <string name="newsandweatherHeader">News and Weather Information</string>
    <string name="newsandweatherBody">For the latest news and weather information, click on the appropriate button below! News information is provided by CSUSB. It is usually bright and sunny at CSUSB with occasional winds and very little rain.  Weather information is provided by Weather Underground.</string>
    <string name="newsandweatherCSUSBNews">CSUSB Campus News</string>
    <string name="newsandweatherCSUSBWeather">CSUSB Campus Weather</string>
    <string name="exchangeProgram121Body">The 1+2+1 Program was started in 2001 under the joint administration of China Educational Association for International Exchange (CEAIE), the China Center for International Educational Exchange (CCIEE), and the American Association of State Colleges and Universities (AASCU), to promote cooperation and exchange between Chinese and U.S. higher education. This is our 5th year offering the 1+2+1 Program and we currently have about 100 students participating. On this page you can read some testimonials from other students in the 1+2+1 Program and see pictures of activities.</string>
    <string name="exchangeProgram121Header">1 - 2 - 1 Articulation Program</string>
    <string name="admissionsHeader">Admissions Information</string>
    <string name="admissionsMBA">MBA</string>
    <string name="admissionsUndergrad">Undergraduate</string>
    <string name="admissionsGrad">Graduate</string>
    <string name="admissionsCSUMentor">CSU Mentor</string>
    <string name="ge_courses_button">GE Courses</string>
    <string name="programsandcoursesheader1">California State University, San Bernardino operates on the quarter system. The fall, winter and spring terms each consist of 10 weeks of instruction plus a final exam week. The university also offers a summer quarter allowing students to accelerate their progress and take summer courses. Summer quarter has overlapping five-week and one 10-week terms.</string>
    <string name="programsandcoursesheader2">Most lecture/discussion courses are offered for four units of credit and meet four hours per week. Each unit of credit typically requires two hours of out-of-class study and preparation in addition to the hour of direct instruction in the class. Laboratories and activity-based courses, such as studio art, music, physical education, computer science, etc. meet for two to three hours of instruction a week for each unit of credit. Students transferring from a semester system campus should note semester courses are five weeks longer (15 weeks versus 10) so that a quarter unit is equal to two-thirds of a semester unit. (Thus, three semester units are equivalent to 4.5 quarter units.)</string>
    <string name="programsandcoursesheader3">The total number of quarter units required for graduation varies from a minimum of 180 for the Bachelor of Arts degree to 198 units for the Bachelor of Science. Students planning to graduate in four years need to take an average of 15 units per quarter to reach 180 units. Master\'s degrees require a minimum of 45 units, but some professional degrees, such as the M.S.W. in Social Work and M.S. in Psychology, have licensing and/or accreditation standards demanding up to 90 units. The Ed.D. in Educational Leadership requires 92 units for completion.</string>
</resources>