<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.csusb.internationalstudies.housing">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/housingHeader"
        android:id="@+id/housingHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onCampusHousingHeader"
        android:id="@+id/onCampusHousingHeader"
        android:layout_below="@+id/housingHeader"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:paddingBottom="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onCampusDescrip"
        android:id="@+id/onCampusDescrip"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/onCampusHousingHeader"
        android:textSize="15sp"
        android:gravity="center"
        android:paddingBottom="5sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onCampusForStudentsButtonTitle"
        android:id="@+id/onCampusForStudentButton"
        android:layout_below="@+id/onCampusDescrip"
        android:layout_centerHorizontal="true"
        android:onClick="openOnCampusHousing"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offCampusHeader"
        android:id="@+id/offCampusHeader"
        android:layout_below="@+id/onCampusForStudentButton"
        android:layout_centerHorizontal="true"
        android:paddingTop="10sp"
        android:textSize="20sp"
        android:paddingBottom="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offCampusDescrip"
        android:id="@+id/offCampusDescrip"
        android:layout_below="@+id/offCampusHeader"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mountainVillageHousing"
        android:id="@+id/mountainVillageHousing"
        android:autoLink="all"
        android:layout_below="@+id/offCampusDescrip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acaciaParkHousing"
        android:id="@+id/acaciaParkHousing"
        android:autoLink="all"
        android:layout_below="@id/mountainVillageHousing"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/athenaGardenHousing"
        android:id="@+id/athenaGardenHousing"
        android:autoLink="all"
        android:layout_below="@id/acaciaParkHousing"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadstoneHousing"
        android:id="@+id/broadstoneHousing"
        android:autoLink="all"
        android:layout_below="@id/athenaGardenHousing"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/castleParkHousing"
        android:id="@+id/castleParkHousing"
        android:autoLink="all"
        android:layout_below="@id/broadstoneHousing"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/havenApartment"
        android:id="@+id/havenApartment"
        android:autoLink="all"
        android:layout_below="@id/castleParkHousing"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lidoHousing"
        android:id="@+id/lidoHousing"
        android:autoLink="all"
        android:layout_below="@id/havenApartment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunriseHousing"
        android:id="@+id/sunriseHousing"
        android:autoLink="all"
        android:layout_below="@id/lidoHousing"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="15sp"/>

</RelativeLayout>
</ScrollView>
