<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.csusb.internationalstudies.otherResources">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otherResourcesHeader"
        android:id="@+id/otherResourceHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="15sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/healthInsuranceButtonTitle"
        android:id="@+id/healthInsuranceButtonTitle"
        android:layout_below="@+id/otherResourceHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:onClick="openHealthInsurance"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/campusMapButtonTitle"
        android:id="@+id/campusMapButton"
        android:layout_below="@+id/healthInsuranceButtonTitle"
        android:layout_centerHorizontal="true"
        android:onClick="openCampusMap"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/housingButtonTitle"
        android:id="@+id/housingButton"
        android:layout_below="@+id/campusMapButton"
        android:layout_centerHorizontal="true"
        android:onClick="openHousingPage"/>
</RelativeLayout>
