<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context="edu.csusb.internationalstudies.programsAndCourses">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="1200dp"
        android:gravity="fill">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseListings"
            android:id="@+id/button4"
            android:onClick="startCourseListingsWebsite"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="189dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ge_courses_button"
            android:id="@+id/button9"
            android:onClick="openGeCourses"
            android:layout_below="@+id/button4"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programsandcoursesheader1"
            android:id="@+id/textView11"
            android:layout_marginTop="53dp"
            android:gravity="center"
            android:layout_below="@+id/button9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/programsandcoursesheader2"
            android:id="@+id/textView12"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/textView13"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programsandcoursesheader3"
            android:id="@+id/textView13"
            android:gravity="center"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/textView11"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>